--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,9 @@
 }
 
 .game-board{
+    
     width: 100%;
-    height: 500px;
+    height: 100vh;
     border: 1px solid #333;
     border-radius: 5px;
     border-bottom: 15px solid rgb(35, 160, 35);
