--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,51 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-   
 }
 
-.game-board{
-    
+.game-board {
     width: 100%;
     height: 100vh;
     border: 1px solid #333;
     border-radius: 5px;
     border-bottom: 15px solid rgb(35, 160, 35);
-    margin: 0 auto ;
+    margin: 0 auto;
     position: relative;
     overflow: hidden;
-    background: linear-gradient(#87ceeb,#e8f6ff);
+    background: linear-gradient(#87ceeb, #e8f6ff);
 }
 
-
-
-
-
-.pipe{
+.pipe {
     position: absolute;
-    width: 80px;
+    width: 70px;
     bottom: 0;
     animation: pipe-animation 1.5s infinite linear;
-    
 }
 
-
-.mario{
+.mario {
     width: 150px;
     position: absolute;
     bottom: 0;
 }
 
-
-.jump{
+.jump {
     animation: jump 500ms infinite ease-out;
-
 }
 
 .cloud {
     width: 550px;
     position: absolute;
     animation: cloud-animation 20s infinite linear;
-
 }
 
-
-
-.botão{
-    width:120px;
+.botao {
+    width: 120px;
     background: green;
     border-radius: 5px;
     margin: 0 auto;
     text-align: center;
-
-
-    
-
 }
-
-
 
 .counter {
     position: fixed;
@@ -74,76 +55,74 @@
     color: #333;
 }
 
-
 .ground {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 10vh; /* Utilizando viewport height para a altura do chão */
-    
+    height: 10vh;
 }
 
 
-@keyframes pipe-animation{
-
-from{
-    right: -80px;
-
+.modal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    z-index: 1000;
 }
 
-
-to{
-
-    right: 100%;
-
+.botao-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
 
+.botao {
+    width: 120px;
+    background: green;
+    border-radius: 5px;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+@keyframes pipe-animation {
+    from {
+        right: -80px;
+    }
+    to {
+        right: 100%;
+    }
 }
 
 @keyframes jump {
-
-
-0% {
-    bottom: 0;
-}
-
-
-40%{
-
-    bottom: 180px;
-}
-
-50%{
-    bottom:180px;
-
-}
-
-60%{
-    bottom: 180px;
-}
-
-100%{
-    bottom:0;
-}
-
+    0% {
+        bottom: 0;
+    }
+    40% {
+        bottom: 180px;
+    }
+    50% {
+        bottom: 190px;
+    }
+    60% {
+        bottom: 180px;
+    }
+    100% {
+        bottom: 0;
+    }
 }
 
 @keyframes cloud-animation {
     from {
         right: 0;
     }
-
     to {
         right: 100%;
-    }
-}
-
-
-@keyframes run {
-    from {
-        transform: translateX(0);
-    }
-    to {
-        transform: translateX(100vw); /* Movendo o dinossauro da esquerda para a direita */
     }
 }
