--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+@media (max-width: 600px) {
+    .mario {
+        width: 80px;
+    }
+}
+
 .game-board {
     width: 100%;
     height: 100vh;
@@ -18,7 +24,7 @@
 
 .pipe {
     position: absolute;
-    width: 70px;
+    width: 80px;
     bottom: 0;
     animation: pipe-animation 1.5s infinite linear;
 }
@@ -30,7 +36,7 @@
 }
 
 .jump {
-    animation: jump 500ms infinite ease-out;
+    animation: jump 600ms infinite ease-out;
 }
 
 .cloud {
